2017-03-16  Alex Christensen  <achristensen@webkit.org>

        Fix GTK build.

        * UIProcess/InspectorServer/WebSocketServerConnection.h:

2017-03-16  Alex Christensen  <achristensen@webkit.org>

        Fix GTK build.

        * UIProcess/InspectorServer/WebSocketServerConnection.cpp:
        (WebKit::WebSocketServerConnection::didReceiveSocketStreamData):
        * UIProcess/InspectorServer/WebSocketServerConnection.h:

2017-03-16  Michael Saboff  <msaboff@apple.com>

        Turn off JavaScript Configuration File processing for Debug builds
        https://bugs.webkit.org/show_bug.cgi?id=169799

        Reviewed by Dean Jackson.

        Change the default value for m_javaScriptConfigurationFileEnabled for Debug
        builds to be the same as a Release build, that is false (off).

        * UIProcess/WebProcessPool.h:

2017-03-16  Simon Fraser  <simon.fraser@apple.com>

        Improve the system tracing points
        https://bugs.webkit.org/show_bug.cgi?id=169790

        Reviewed by Zalan Bujtas.

        Use a more cohesive set of system trace points that give a good overview of what
        WebKit is doing. Added points for resource loading, render tree building, sync messages
        to the web process, async image decode, WASM and fetching cookies.

        * UIProcess/ChildProcessProxy.h:
        (WebKit::ChildProcessProxy::sendSync):
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::handleTouchEventSynchronously):
        * UIProcess/mac/RemoteLayerTreeDrawingAreaProxy.mm:
        (WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTree):
        (WebKit::RemoteLayerTreeDrawingAreaProxy::didRefreshDisplay):
        * WebProcess/WebPage/mac/RemoteLayerTreeContext.mm:
        (WebKit::RemoteLayerTreeContext::buildTransaction):
        * WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.mm:
        (WebKit::RemoteLayerTreeDrawingArea::didUpdate):
        (WebKit::RemoteLayerTreeDrawingArea::BackingStoreFlusher::flush):
